# pool-memalloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  architecture.md
benchmark/: benchmark.cpp
include/: alloc_stats.hpp  multi_size_allocator.hpp  numa_allocator.hpp  numa_utils.hpp  pool_allocator.hpp  thread_cache.hpp
src/: multi_size_allocator.cpp  numa_allocator.cpp  numa_utils.cpp  pool_allocator.cpp  thread_cache.cpp
